<resources>
    <string name="app_name">Task-Manager</string>
    <string name="full_name">Full Name</string>
    <string name="company_name">Company Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_nlogin_here">Already have an account\nLogin Here</string>
    <string name="login">Login</string>
    <string name="don_apos_t_have_an_account_nregister_here">Don\'t have an account\nRegister Here</string>
    <string name="title_activity_home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="my_projects">My Projects</string>
    <string name="title_activity_projects">Projects</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="create_project">Create Project</string>
    <string name="date_created">Date Created</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="project_settings">Project Settings</string>
    <string name="to_do">To do</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="edit_project_details">Edit Project Details</string>
    <string name="title_activity_project_tasks">ProjectTasks</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="due_date">Due Date</string>
    <string name="choose_which_list_you_want_to_add_the_above_task">Choose which List you want to add the above task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="choose_due_date">Choose Due Date</string>
    <string name="due_date_n23rd_february">Due Date:\n23rd February</string>
    <string name="logout">Logout</string>
    <string name="edit_task_details">Edit Task Details</string>
    <string name="delete_project">Delete Project</string>
    <string name="delete_task">Delete Task</string>
    <string-array name="taskTypes">
        <item>Choose Task List</item>
        <item>To Do</item>
        <item>Doing</item>
        <item>Done</item>
    </string-array>
</resources>
