<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mnahm5.test.MainActivity">
    <item
        android:id="@+id/action_project_settings"
        android:orderInCategory="100"
        android:title="@string/project_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_to_do"
        android:orderInCategory="100"
        android:title="@string/to_do"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_doing"
        android:orderInCategory="100"
        android:title="@string/doing"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        android:title="@string/done"
        app:showAsAction="never" />
</menu>
