<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mnahm5.task_manager.ResetPassword">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etOldPassword"
        android:layout_below="@+id/tvFullName"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btCancel"
        android:hint="@string/old_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etNewPassword"
        android:layout_below="@+id/etOldPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btCancel"
        android:hint="@string/new_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etNewPassword2"
        android:layout_below="@+id/etNewPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btCancel"
        android:hint="@string/re_type_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:id="@+id/btReset"
        android:layout_below="@+id/etNewPassword2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btCancel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btCancel"
        android:layout_below="@+id/btReset"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
