<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mnahm5.task_manager.TaskDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/editTaskScrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTaskLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/task_title"
                android:id="@+id/tvTaskTitle" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etTaskTitle"
                android:hint="@string/task_title" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/task_description"
                android:id="@+id/tvTaskDescription"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/etTaskDescription"
                android:hint="@string/task_description" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:entries="@array/taskTypes"
                android:spinnerMode="dropdown"
                android:id="@+id/spTaskType"></Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_due_date"
                android:id="@+id/tvDueDate"
                android:layout_gravity="center_horizontal" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dpDueDate"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_task_details"
                android:id="@+id/btEdit"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btCancel"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
